# tetris-qt

./: README.md
code/: AboutDialog.cpp  AboutDialog.h  AuthorWidget.cpp  AuthorWidget.h  CMakeLists.txt  Game.cpp  Game.h  GameWidget.cpp  GameWidget.h  InformationWidget.cpp  InformationWidget.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  Next.cpp  Next.h  Painter.cpp  Painter.h  Properties.h  Score.cpp  Score.h  WindowAssistant.cpp  main.cpp  tools.cpp  tools.h
code/LogicalLayer/: Game.cpp  Game.h  GameShape.cpp  GameShape.h  Piece.cpp  Piece.h  Producer.cpp  Producer.h
code/logicLayer/: Game.cpp  Game.h  GameShape.cpp  GameShape.h
code/tools/: Singleton.h  tool.h
window/: CMakeLists.txt  GameWidget.cpp  GameWidget.h  InformationWidget.cpp  InformationWidget.h  MainWidget.cpp  MainWindow.cpp  WindowAssistant.cpp  WindowAssistant.h
window/logicLayer/: Piece.cpp  Piece.h
